k8s/chatemo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatemo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chatemo
  template:
    metadata:
      labels:
        app: chatemo
    spec:
      restartPolicy: Always
      containers:
        - name: chatemo
          image: australia-southeast1-docker.pkg.dev/chatemo/francizhong/chatemo:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: '512Mi'
              cpu: '500m'
            limits:
              memory: '1Gi'
              cpu: '1'
