k8s/chatemo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: chatemo
spec:
  type: ClusterIP
  selector:
    app: chatemo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
