k8s/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  type: LoadBalancer
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
