k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chatemo-ingress
spec:
  tls:
    - secretName: chatemo-ingress
  rules:
    - host: chatemo.chat
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chatemo
                port:
                  number: 80
